[package]
name = "s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
rusqlite = { version = "0.28.0", features = ["bundled"] }
axum ={ version = "0.6"}
tokio ={ version = "1",features = ["full"]}
state = { version = "0.5", features = ["tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }